upload-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: video-server
  namespace: video-app
spec:
  selector:
    app: video-server
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
